# LLM-router

./: Cargo.toml  Dockerfile  LICENSE  README.md  config.yml
src/: config.rs  lib.rs  main.rs  model.rs  router.rs
tests/: config.rs  integration_tests.rs  model.rs  router.rs
