[package]
name = "LLM-router"
version = "0.2.0"
edition = "2024"

[lib]
name = "llm_router"
path = "src/lib.rs"

[[bin]]
name = "LLM-router"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
http-body-util = "0.1"
base64 = "0.22"
tower = "0.5.2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3.20"

